--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -10,7 +10,6 @@
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1 class="text-center"> Github User Data </h1>
 	<div class="col-lg-12">
       <style>
         .form-signin {
@@ -64,36 +63,36 @@
             <button class="btn btn-lg btn-primary btn-block" type="submit">Get Data</button>
           </form>
       </div>
-      <div class="table-responsive">
-          <table class="table table-bordered table-hover table-striped tablesorter">
-              <thead>
-              <tr>
-                <th class="header"> Username <i class="icon-sort"></i></th>
-                <th class="header"> Blog <i class="icon-sort"></i></th>
-                <th class="header"> Public Repos <i class="icon-sort"></i></th>
-                <th class="header"> Public Gists <i class="icon-sort"></i></th>
-                <th class="header"> Email <i class="icon-sort"></i></th>
-                <th class="header"> Followers <i class="icon-sort"></i></th>
-                <th class="header"> Following <i class="icon-sort"></i></th>
-              </tr>
-          </thead>
-          <tbody>
-          
-          {% for key in data %}
-              <tr>
-                  <td>{{ key.name }}</td>
-                  <td>{{ key.blog }}</td>
-                  <td>{{ key.public_repos }}</td>
-                  <td>{{ key.public_gists }}</td>
-                  <td>{{ key.email }}</td>
-                  <td>{{ key.followers }}</td>
-                  <td>{{ key.following }}</td>
-              </tr>
-          {% endfor %}
-          
-          </tbody>
-          </table>
-      </div>
+     <div class="form-container" >
+			<div class="form-group">
+				<label for="search">Search:</label>
+				<input type="search" class="form-control" id="search">
+				<button type="button" class="btn btn-primary" onclick="showResponse()">Search</button>
+			</div>
+			<div class="dontShow" id="searchResponse">
+				<div class="row">
+					<div class="thumbnail">
+						<div class="col-md-4 col-lg-4">
+							<img src="breakfast2no.jpg">
+						</div>
+					
+					<div class="col-md-8 col-lg-8">
+							<p>This is some breakfast yo</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+						<div class="thumbnail">
+							<div class="col-md-4 col-lg-4">
+								<img src="breakfast5yes.jpg">
+							</div>
+						<div class="col-md-8 col-lg-8">
+							<p>This is some more breakfast yo</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
     </div>
 </body>
 </html>
