--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'app/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/styles.css' %}" />
     
 </head>
 <body>
