--- a/app/templates/app/preferenceSelection.html
+++ b/app/templates/app/preferenceSelection.html
@@ -52,7 +52,7 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
-        <form method="post" action="../search/">
+        <form method="post" action="/app/preferenceSelection/">
           {% csrf_token %}
           <div class="container">
             <div class="row">
@@ -571,7 +571,8 @@
                       <input class="form-check-input" type="radio" name="radio-group-ice-cream" value="dislike">
                     </div>
                   </div>
-                  <input type="submit" class="btn btn-info" value="Submit"></input>
+                  <input type="submit" class="btn btn-info" value="Save"></input>
+                  <input type="button" class="btn btn-info" value="Submit" onclick="location.href='../search'"></input>
                 </div>
             </div>
           </div>
