--- a/app/templates/app/chatbot.html
+++ b/app/templates/app/chatbot.html
@@ -69,7 +69,7 @@
   			  <p id="chatlog3" class="chatlog">{{messages.2}}</p>
   			  <p id="chatlog2" class="chatlog">{{messages.1}}</p>
               <p id="chatlog1" class="chatlog">{{messages.0}}</p>
-              <input type="text" class="form-control" name="chat" id="chatbox" placeholder='Chat with Me!'">
+              <input type="text" class="form-control" name="chat" id="chatbox" placeholder='Chat with Me!'>
           </form>
 		  </div>
       </div>
