Meals: added meals page, basic functionality, will make prettier

--- a/app/templates/app/preferenceSelection.html
+++ b/app/templates/app/preferenceSelection.html
@@ -2,22 +2,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
-	 <!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-         <link rel="stylesheet" type="text/css" href="{% static 'app/styles.css' %}"></link>
-		<script type="text/javascript" src = "{% static 'app/scripts.js' %}"></script>
+  <link rel="stylesheet" type="text/css" href="{% static 'app/styles.css' %}"></link>
+  <script type="text/javascript" src = "{% static 'app/scripts.js' %}"></script>
 </head>
 <body>
-      <style>
-        .form-signin {
-          max-width: 550px;
-          padding: 15px;
-          margin: 0 auto;
-        }
-      </style>
+
 <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -572,7 +566,7 @@
                     </div>
                   </div>
                   <input type="submit" class="btn btn-info" value="Save"></input>
-                  <input type="button" class="btn btn-info" value="Submit" onclick="location.href='../search'"></input>
+                  <input type="button" class="btn btn-info" value="Submit" onclick="location.href='../meals'"></input>
                 </div>
             </div>
           </div>
