Fixed lunch ingredients bug

--- a/app/templates/app/meals.html
+++ b/app/templates/app/meals.html
@@ -106,7 +106,7 @@
                 </div>
             {% for ingredient in lunch.ingredients %}
                 <div class="container text-center">
-                    <font size="6">{ingredient{}}</font>
+                    <font size="6">{{ingredient}}</font>
                 </div>
             {% endfor %}
             <div class="container text-center">
