--- a/app/templates/app/preferenceSelection.html
+++ b/app/templates/app/preferenceSelection.html
@@ -565,8 +565,15 @@
                       <input class="form-check-input" type="radio" name="radio-group-ice-cream" value="dislike">
                     </div>
                   </div>
-                  <input type="submit" class="btn btn-info" value="Save"></input>
-                  <input type="button" class="btn btn-info" value="Submit" onclick="location.href='../meals'"></input>
+                  <div class="col-md-12">
+                    <input type="submit" class="btn btn-info" value="Submit"></input>
+                  </div>
+                  <div class="col-md-12">
+                  &nbsp;
+                  </div>
+                  <div class="col-md-12">
+                  <input type="button" class="btn btn-info" value="Next" onclick="location.href='../meals'"></input>
+                  </div>
                 </div>
             </div>
           </div>
