--- a/app/static/app/styles.css
+++ b/app/static/app/styles.css
@@ -1,25 +1,152 @@
+body {
+  margin: 0px;
+  padding: 0px;
+  font-family: Roboto;
+}
+
+.header {
+  margin: 0;
+  width: 100%;
+  padding-bottom: 4px;
+  font-family: Pacifico;
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.06), 0 4px 5px 0 rgba(0,0,0,0.06), 0 1px 10px 0 rgba(0,0,0,0.08);
+  color: #333333;
+}
+
+.header .logo {
+  text-align: center;
+}
+
+.header .loginStatus {
+  text-align: right;
+}
+
+.header h1 {
+  margin: 0px;
+  text-align: center;
+}
+
+.headerLogin p {
+  float: right;
+}
+
+.main {
+  margin: 0 auto;
+  width: 60%;
+  padding: 10px;
+  overflow-x: scroll;
+}
+
+.buttonRound {
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 3px;
+    display: inline-block;
+    font-size: 16px;
+
+    background-color: white;
+    color: 333333;
+    border: 2px solid #333333; /* Blue */
+
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+}
+
+.buttonRound:hover {
+  background-color: #68DDDB; 
+}
+
+.buttonRound:active {
+  transition-duration: .05s;
+  background-color: #14FCF8;
+}
+
 .createAccont, .form-container{
     margin: 0 auto;
     width: 40%;
 }
 
-.thumbnail img {
-    height:200px;
-    width:100%;
-    box-shadow: 3px 3px 5px 3px #ccc;
+/* Cards */
+.band {
+  width: auto;
+  max-width: 1240px;
+  margin: 0 auto;
+
+  display: grid;
+
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+
 }
 
-.title-card {
-	width: 100%;
-	font-size: 48px;
-	text-align: center;
+@media only screen and (min-width: 850px) {
+  .band {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
 }
 
-.picked {
-    filter: grayscale(100%);
+/* card */
+
+.card {
+  min-height: 100%;
+  background: white;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: #444;
+  position: relative;
+  top: 0;
+  transition: all .1s ease-in;
 }
+
+.card:hover {
+  top: -2px;
+  box-shadow: 0 4px 5px rgba(0,0,0,0.2);
+}
+
+.card article {
+  padding: 20px;
+  display: flex;
+
+  flex: 1;
+  justify-content: space-between;
+  flex-direction: column;
+
+}
+.card .thumb {
+  padding-bottom: 60%;
+  background-size: cover;
+  background-position: center center;
+}
+
+.card p {
+  flex: 1; /* make p grow to fill available space*/
+  line-height: 1.4;
+}
+
+/* typography */
+.card h1 {
+  font-size: 20px;
+  margin: 0;
+  color: #333;
+}
+
+.card span {
+  font-size: 12px;
+  font-weight: bold;
+  color: #999;
+  text-transform: uppercase;
+  letter-spacing: .05em;
+  margin: 2em 0 0 0;
+}
+
+
 
 /* Chatbot */
+/*
 body {
   font: 15px arial, sans-serif;
   background-color: #d9d9d9;
@@ -83,3 +210,4 @@ pre {
 #bye {
   display: none;
 }
+*/
