--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,61 +3,31 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
-  <!-- jQuery library -->
+  <link rel="stylesheet" type="text/css" href="{% static 'app/styles.css' %}"></link>
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <script type="text/javascript" src = "{% static 'app/scripts.js' %}"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <title>{% block title %}Mealy Login{% endblock %}</title>
+  <title>{% block title %}Mealy{% endblock %}</title>
 </head>
 <body>
-  <header>
-    <h1>Mealy</h1>
+  <div class="header">
+    <span>
+        <h1>mealy</h1>
+    </span>
+  </div>
+  <div class="headerLogin">
     {% if user.is_authenticated %}
       Hi {{ user.username }}!
       <a href="{% url 'logout' %}">logout</a>
     {% else %}
       <a href="{% url 'login' %}">login</a>
     {% endif %}
-    <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Mealy</a>
-                    </div>
+  </div>
 
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class=""><a href="#">Meal Plan <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Shopping List</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Sign In</a></li>
-                        <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Personal Info</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Dietary Restrictions</a></li>
-                            <li><a href="#">Preferences</a></li>
-                        </ul>
-                        </li>
-                    </ul>
-                    </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
-            </nav>
-  </header>
-  <hr>
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
-  <hr>
+  <div class="main">
+  {% block content %}
+  {% endblock %}
+  </div>  
 </body>
 </html>
