--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
-
-{% block title %}Login{% endblock %}
+{% block title %}Mealy - Login{% endblock %}
 
 {% block content %}
   <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button class="buttonRound" type="submit">Login</button>
   </form>
 {% endblock %}
